# Rampit

./: .env  .env.example  .env.local.example  .gitignore  API.md  README.md  index.html  netlify.toml  next.config.js  next.config.ts  package-lock.json  package.json
contracts/: .env.example  .gitignore  deployments.json  load-env.sh
contracts/evm/: deploy-celo.sh  deploy-mainnet.sh  foundry.toml
contracts/solana/: Anchor.toml  deploy-mainnet.sh  package-lock.json  package.json
contracts/solana-native/: Cargo.toml  build.sh
contracts/solana-native/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
contracts/solana/programs/rampit-escrow/: Cargo.toml
contracts/solana/programs/rampit-escrow/src/: errors.rs  events.rs  lib.rs  state.rs
contracts/solana/programs/rampit-escrow/src/instructions/: admin.rs  cancel_order.rs  collect_fees.rs  create_order.rs  initialize.rs  mod.rs  refund_order.rs  release_order.rs
contracts/stacks/: Clarinet.toml  package-lock.json  package.json  tsconfig.json
contracts/stellar/: Cargo.toml  deploy-mainnet.sh  deploy-testnet.sh  lib-deploy.sh
design/: DESIGN_SPEC.md
docs/: stellar-integration.md
public/: logo-preview.html
src/: App.jsx  style.css
src/api/: endpoints.js  index.js
src/app/: globals.css  layout.tsx  page.tsx
src/components/: AuthModal.jsx  AuthModal.tsx  AuthModalRoot.tsx  Benefits.jsx  BuyCrypto.jsx  BuyForm.tsx  Challenge.jsx  DashboardLayout.jsx  DevBanner.jsx  Features.jsx  Footer.jsx  Footer.tsx  Header.jsx  Header.tsx  Hero.jsx  Hero.tsx  HowItWorks.tsx  HyperAutomation.jsx  (+3 more)
(+86 files in other folders)
