[package]
name = "rampit-escrow-native"
version = "0.1.0"
edition = "2021"
description = "Minimal Rampit escrow (no Anchor)"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "1.18"
borsh = "0.9"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
overflow-checks = true
panic = "abort"

[profile.release.build-override]
opt-level = "z"
incremental = false
codegen-units = 1
